2008-05-22  Timothy Hatcher  <timothy@apple.com>

        Changes to keep Windows building.

        <rdar://problem/5956403> Update the Develop menu to match the new Inspector items

        Reviewed by Adam Roben.

        * English.lproj/Localizable.strings: Added new strings.
        * WebInspector.cpp:
        (WebInspector::showConsole): Call showPanel.
        * WebInspector.h:

2008-05-21  Adele Peterson  <adele@apple.com>

        Reviewed by Adam.

        WebKit part of for <rdar://problem/5787733> fast/dom/HTMLDocument/hasFocus.html fails on Windows
        
        * WebCoreSupport/WebChromeClient.cpp:
        (WebChromeClient::focus): Call updateActiveState directly.
         Normally this would happen on a timer, but JS might need to know this earlier, so we'll update here.        
        (WebChromeClient::unfocus): ditto.
        * WebView.cpp: (WebView::updateActiveStateSoon): Added comment about why we use a timer for this.

=== End merge of squirrelfish ===

2008-05-13  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Updated for new JS debugging APIs.

        * WebScriptDebugServer.cpp:
        (WebScriptDebugServer::didParseSource):
        (WebScriptDebugServer::failedToParseSource):
        * WebScriptDebugServer.h:

2008-05-09  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff.

        Build fixes for SquirrelFish on windows.

        * WebScriptCallFrame.cpp:
        (callingFunctionOrGlobalExecState):
        (WebScriptCallFrame::caller):
        (WebScriptCallFrame::functionName):
        (WebScriptCallFrame::variableNames):
        (WebScriptCallFrame::valueForVariable):
        (WebScriptCallFrame::valueByEvaluatingJavaScriptFromString):
        * WebScriptDebugServer.cpp:
        (WebScriptDebugServer::willLeaveCallFrame):

2008-05-19  Adam Roben  <aroben@apple.com>

        Make WebKit.idl rebuild whenever any of its included interfaces are
        changed
