@@ -111,6 +111,11 @@ HRESULT STDMETHODCALLTYPE WebInspector::showConsole()
     return S_OK;
 }
 
+HRESULT STDMETHODCALLTYPE WebInspector::unused1()
+{
+    return S_OK;
+}
+
 HRESULT STDMETHODCALLTYPE WebInspector::close()
 {
     if (m_webView)
